// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute reth endpoint returns rETH/ETH price with no input params 1`] = `
Object {
  "data": Object {
    "result": 1.04,
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 1.04,
  "statusCode": 200,
}
`;

exports[`execute reth endpoint returns rETH/USD price with "quote: USD" input param 1`] = `
Object {
  "data": Object {
    "result": 1341.6,
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 1341.6,
  "statusCode": 200,
}
`;
